[project]
name = "shippy"
description = "processing of ship campaign data"
authors = [
    {name = "Laura Köhler", email = "laura.koehler@mpimet.mpg.de"},
]
version = "0.0.1"

[project.optional-dependencies]
tests = [
    "pytest",
    "black"
]

[project.scripts]
shippy = "shippy.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
